Deleted duplicate script

--- a/Kevin_Project_1.ipynb
+++ b/Kevin_Project_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "4cf63568-7d01-47a9-b2c4-70abcb3bda43",
    "metadata": {},
    "outputs": [],
@@ -15,18 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "17b8ff4d-e074-4724-9f59-45ac1642f66d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"../Project 1 Data/Violence-Project-Data.csv\"\n",
-    "data_df = pd.read_csv(path)"
+    "path_1 = \"../Project 1 Data/Full_Data.csv\"\n",
+    "path_2 = \"../Project 1 Data/Firearms_Data.csv\"\n",
+    "path_3 = \"../Project 1 Data/Trend_Data.csv\"\n",
+    "fire_data = pd.read_csv(path_2)\n",
+    "full_data = pd.read_csv(path_1)\n",
+    "trend_data = pd.read_csv(path_3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "57bd23f0-fddc-436b-9044-abc33e8b5c4e",
    "metadata": {
     "scrolled": true,
@@ -429,19 +433,62 @@
        "[181 rows x 142 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_df"
+    "full_data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "780510da-cf5e-459f-b49d-36b933d317df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Mayra's Definition of Mass Shooting: Incident of 5 or more deaths\n",
+    "#My definition: 4 or more deaths and/or injuries (not including the shooter)\n",
+    "#My Question's: Do more or less shootings happen with a registered or unregistered firearm?\n",
+    "#What time of the day do most shootings happen?\n",
+    "#Where do most shootings take place?\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f741d3da-bfcc-40af-91bd-b0bef5a3a679",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  4,  9,  5,  8,  6,  7,  3, 10,  0,  2])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Declaring codes for location column:\n",
+    "#K-12 school = 0, College/university = 1, Government building / place of civic importance = 2,\n",
+    "#House of worship = 3, Retail = 4, Restaurant/bar/nightclub = 5, Office = 6, Place of residence = 7,\n",
+    "#Outdoors = 8, Warehouse/factory = 9, Post office = 10\n",
+    "\n",
+    "location = full_data['Location']\n",
+    "#loc_codes = location.count_values()\n",
+    "loc_codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0efb67a-df16-4cab-b07e-733d3ebe3c01",
    "metadata": {},
    "outputs": [],
    "source": []
